--- a/style.css
+++ b/style.css
@@ -33,9 +33,11 @@ input {
     display: flex;
     gap: 10px;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     width: 100%;
     max-width: 350px;
+    margin-top: 10px;
 }
 
 button {
@@ -77,20 +79,15 @@ p {
     font-weight: 500;
 }
 
-input[type="checkbox"] {
-    transform: scale(1.3);
-    cursor: pointer;
-    background-color: #ff758c;
-}
 
 #summary {
     font-size: 20px;
     font-weight: bold;
     margin-top: 15px;
-    color: #222;
+    color:  linear-gradient(135deg, #ff758c, #ff7eb3);
 }
 
-/* @media (max-width: 400px) {
+@media (max-width: 400px) {
     input {
         width: 250px;
     }
@@ -98,4 +95,9 @@ input[type="checkbox"] {
     p {
         width: 280px;
     }
-} */
+
+    .button-container {
+        flex-direction: column;
+        align-items: center;
+    }
+}
