--- a/style.css
+++ b/style.css
@@ -82,12 +82,13 @@ button {
 }
 
 #paragraphsCard {
+    margin-top: 0px;
+
     width: 380px;
-    background: rgba(255, 255, 255, 0.9);
+    background: transparent;
     padding: 20px;
     margin-top: 20px;
     border-radius: 12px;
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
     max-height: 300px;
     overflow-y: auto;
 }
@@ -118,9 +119,11 @@ input[type='checkbox'] {
 }
 
 label {
-    font-size: 17px;
+    font-size: 15px;
+    font-style: oblique;
     display: flex;
     align-items: center;
+    padding: 12px;
     cursor: pointer;
     color: #fff;
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
@@ -128,6 +131,7 @@ label {
 }
 
 label input {
+    
     margin-left: 5px;
 }
 
